--- a/index.html
+++ b/index.html
@@ -96,18 +96,12 @@
             <div class="slider__text">
               Полное прекращение существования юридического лица с сохранением легальности всей предыдущей деятельности.
             </div>
-
             <a data-fancybox data-src="#modal" href="javascript:" class="slider__btn default-btn">
               Оставить заявку
             </a>
           </div>
 
         </div>
-
-
-
-
-
       </div>
     </div>
   </section>
@@ -185,9 +179,118 @@
     </div>
   </section>
   <section class="about">
-    
+    <div class="container">
+      <div class="about__inner">
+
+
+        <div class="about__title">
+          О компании
+        </div>
+        <div class="about__text">
+          Компания специализируется на оказании услуг в сфере корпоративного права, налогового консалтинга,
+          представительства в судах, ликвидации и банкротства предприятий. На сегодняшний день, коллектив компании
+          объединяет
+          высокопрофессиональных экспертов имеющих
+        </div>
+        <a href="#" class=" default-btn about_btn">
+          Узнать больше
+        </a>
+      </div>
+    </div>
   </section>
 
+  <section class="form">
+    <div class="container">
+      <div class="form__inner">
+        <div class="form__content">
+          <div class="form__title-box">
+            <div class="form__title">
+              Получить Консультацию
+            </div>
+            <div class="form__text">
+              Комплексный подход к вашему вопросу, своевременная правовую помощь, представление интересов во всех
+              судебных инстанциях.
+            </div>
+          </div>
+          <div class="form__box">
+            <form>
+              <div class="form__box-inner">
+                <div class="form__box-left">
+                  <label>
+                    E-mail
+                    <input type="text">
+                  </label>
+
+                  <label>
+                    Контактный телефон
+                    <input type="text">
+                  </label>
+
+                  <label>
+                    ФИО
+                    <input type="text">
+                  </label>
+
+                  <label>
+                    Тема вопроса
+                    <select>
+                      <option>--------------</option>
+                      <option>--------------</option>
+                      <option>--------------</option>
+                      <option>--------------</option>
+                    </select>
+                  </label>
+                </div>
+
+                <div class="form__box-right">
+                  <label>
+                    Сообщение
+                    <textarea></textarea>
+                  </label>
+                  <button type="submit" class="default-btn">
+                    Получить консультацию
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="advantages">
+    <div class="container">
+      <div class="advantages__inner">
+        <div class="advantages__item">
+          <div class="advantages__title">
+            Большой опыт сопровождения банкротства
+          </div>
+          <div class="advantaged__text">
+            Мы обладаем большим опытом сопровождения процедур банкротства предприятий.
+          </div>
+        </div>
+
+        <div class="advantages__item">
+          <div class="advantages__title">
+Десятки добровольных ликвидаций ежемесячно
+          </div>
+          <div class="advantaged__text">
+            Мы умеем минимизировать все риски в процессе добровольной ликвидации юридических лиц.
+          </div>
+        </div>
+
+        <div class="advantages__item">
+          <div class="advantages__title">
+            Отличное знание законов в сфере банкротства 
+          </div>
+          <div class="advantaged__text">
+            Позволяют нам эффективно отстаивать как интересы кредиторов, так и интересы собственников проблемной организации.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <div id="modal">
     <h2>Hello!</h2>
