--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
 </head>
 
 <body>
@@ -292,9 +293,137 @@
     </div>
   </section>
 
+  <section class="news">
+    <div class="container">
+      <div class="news__top">
+        <div class="news__title-box">
+          <div class="news__title">
+            Новости Компании
+          </div>
+          <div class="news__text">
+            Комплексный подход к вашему вопросу, своевременная правовую помощь, представление интересов во всех судебных
+            инстанциях.
+          </div>
+        </div>
+        <div class="news__btn">
+          <a href="#">
+            Открыть все новости
+          </a>
+        </div>
+      </div>
+      <div class="news__inner">
+        <div class="news__slider">
+          <div class="news__slider-inner">
+            <div class="news__slider-item">
+              <div class="news__slider-title">
+                Банкротство и ликвидация предприятия в Украине
+              </div>
+              <div class="news__slider-text">
+                На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права. На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права. На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права...»
+              </div>
+              <div class="news__slider-author">
+                Андрей Ворошилов, генеральный д иректор компании Bankom
+              </div>
+            </div>
+
+            <div class="news__slider-item">
+              <div class="news__slider-title">
+                Банкротство и ликвидация предприятия в Украине
+              </div>
+              <div class="news__slider-text">
+                На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права. На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права. На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права...»
+              </div>
+              <div class="news__slider-author">
+                Андрей Ворошилов, генеральный д иректор компании Bankom
+              </div>
+            </div>
+
+            <div class="news__slider-item">
+              <div class="news__slider-title">
+                Банкротство и ликвидация предприятия в Украине
+              </div>
+              <div class="news__slider-text">
+                На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права. На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права. На сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права...»
+              </div>
+              <div class="news__slider-author">
+                Андрей Ворошилов, генеральный директор компании Bankom
+              </div>
+            </div>
+          </div>
+          </div>
+          <a class="news__blog" href="#">
+            <div class="news__images">
+              <img src="images/news-1.jpg" alt="">
+              <div class="news__date">
+                03.04
+              </div>
+              <div class="news__blog-title">
+                Новость компании 
+              </div>
+              <div class="news__blog-text">
+                а сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права...»
+              </div>
+            </div>
+          </a>
+          <a class="news__blog" href="#">
+            <div class="news__images">
+              <img src="images/news-2.jpg" alt="">
+              <div class="news__date">
+                03.04
+              </div>
+              <div class="news__blog-title">
+                Новость компании 
+              </div>
+              <div class="news__blog-text">
+                а сегодняшний день, коллектив компании объединяет высокопрофессиональных экспертов имеющих специализации в отдельных областях права...»
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer__content">
+      <div class="container">
+        <div class="footer__inner">
+        <div class="footer__info">
+          <div class="footer__title">
+            Комплексное закрытие предприятия
+          </div>
+          <div class="footer__text">
+            Полное прекращение существования юридического лица с сохранением легальнос
+          </div>
+          <a data-fancybox data-src="#modal" href="javascript:;" class="header__btn" href="#">Бесплатная
+            консультация</a>
+            <ul class="footer__list">
+              <li><a href="tel:7777777" class="footer__phone">+38 (096) 309 21 45        </a></li>
+              <li><a href="#">layout585@gmail.com</a></li>
+              <li><a href="#" class="footer__adress"> Киев, ул.Пушкина, 13  </a></li>
+            </ul>
+        </div>
+        <div class="footer__map">
+          <iframe width="630" height="250" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2361.1926335209764!2d91.42096091529804!3d53.71483065474803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5d2c3d439b7a2499%3A0x2881e3f6dfe09a4d!2z0JTQvtC8INCa0L7Qu9C-0YLRg9GI0LrQuNC90LA!5e0!3m2!1sru!2sua!4v1590927754138!5m2!1sru!2sua"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer__copy">
+      <div class="container">
+        <div class="copy__text">
+          © 2017 Template by Anastasia Shaposhnyk. Все права защищены.
+        </div>
+      </div>
+    </div>
+    </div>
+  </footer>
+
   <div id="modal">
-    <h2>Hello!</h2>
-    <p>You are awesome!</p>
+    <form>
+      <input type="text" placeholder="Ваше имя">
+      <input type="text" placeholder="Ваш Телефон">
+      <input type="submit" value="Отправить">
+    </form>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
